Prevent bad wrap

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -19,3 +19,7 @@ nav {
 }
 
 
+#header_wrap h2{
+	width:65%;
+
+}
